[gd_scene load_steps=89 format=3 uid="uid://dsqeo7ol5t11u"]

[ext_resource type="Texture2D" uid="uid://ji4frrbsnham" path="res://assets/textures/characters/hero/swashbuckler/Swashbuckler_idle.png" id="1_7uws0"]
[ext_resource type="Script" uid="uid://6p5qmb8lmk3k" path="res://scenes/characters/player/player.gd" id="1_t61fv"]
[ext_resource type="Texture2D" uid="uid://urml3ihex7nq" path="res://assets/textures/characters/hero/swashbuckler/Swashbuckler_woodcutting.png" id="2_3xnwo"]
[ext_resource type="Texture2D" uid="uid://d07dqa0wpluhe" path="res://assets/textures/characters/hero/swashbuckler/Swashbuckler_walk.png" id="3_6avc5"]
[ext_resource type="Script" uid="uid://dpcpqo8vybrpj" path="res://scripts/utils/state_machine/state_machine.gd" id="3_hss88"]
[ext_resource type="Texture2D" uid="uid://7do46mhc0uuu" path="res://assets/textures/characters/hero/swashbuckler/Swashbuckler_mining.png" id="4_djydg"]
[ext_resource type="Script" uid="uid://c7gc1ixvpqxaw" path="res://scenes/characters/player/states/idle_state.gd" id="4_qd3e3"]
[ext_resource type="Script" uid="uid://b5qtxr2leyw3k" path="res://scenes/characters/player/states/walk_state.gd" id="5_6avc5"]
[ext_resource type="Script" uid="uid://b1xggoxcfhxdr" path="res://scenes/characters/player/states/chopping_state.gd" id="7_42irl"]
[ext_resource type="PackedScene" uid="uid://3mnrmrt71mj3" path="res://scenes/components/select/selection_component.tscn" id="7_mk55u"]
[ext_resource type="Script" uid="uid://bvsm3xvo65ej" path="res://scenes/characters/player/states/mining_state.gd" id="9_3xnwo"]
[ext_resource type="Script" uid="uid://c516pe4s3x8k6" path="res://scenes/characters/player/states/interact_state.gd" id="11_blysn"]
[ext_resource type="PackedScene" uid="uid://cl6jva641pt1t" path="res://scenes/components/hit_box_component.tscn" id="12_bsn6e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pbtrp"]
atlas = ExtResource("2_3xnwo")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_es5sa"]
atlas = ExtResource("2_3xnwo")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxlma"]
atlas = ExtResource("2_3xnwo")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieypo"]
atlas = ExtResource("2_3xnwo")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sulyr"]
atlas = ExtResource("2_3xnwo")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_71adu"]
atlas = ExtResource("2_3xnwo")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xm30n"]
atlas = ExtResource("2_3xnwo")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qe74o"]
atlas = ExtResource("2_3xnwo")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4se6"]
atlas = ExtResource("2_3xnwo")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c5ab"]
atlas = ExtResource("2_3xnwo")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_omk8d"]
atlas = ExtResource("2_3xnwo")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kghjy"]
atlas = ExtResource("2_3xnwo")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_72eiu"]
atlas = ExtResource("2_3xnwo")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rr0sw"]
atlas = ExtResource("2_3xnwo")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejaeo"]
atlas = ExtResource("2_3xnwo")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbkvr"]
atlas = ExtResource("2_3xnwo")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofe5m"]
atlas = ExtResource("2_3xnwo")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qiw4v"]
atlas = ExtResource("2_3xnwo")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_35rnk"]
atlas = ExtResource("2_3xnwo")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8clsk"]
atlas = ExtResource("2_3xnwo")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t61fv"]
atlas = ExtResource("1_7uws0")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_686vu"]
atlas = ExtResource("1_7uws0")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hss88"]
atlas = ExtResource("1_7uws0")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qd3e3"]
atlas = ExtResource("1_7uws0")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6avc5"]
atlas = ExtResource("1_7uws0")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mk55u"]
atlas = ExtResource("1_7uws0")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuses"]
atlas = ExtResource("1_7uws0")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_42irl"]
atlas = ExtResource("1_7uws0")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xnwo"]
atlas = ExtResource("1_7uws0")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_djydg"]
atlas = ExtResource("1_7uws0")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsn6e"]
atlas = ExtResource("1_7uws0")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_blysn"]
atlas = ExtResource("1_7uws0")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv5x3"]
atlas = ExtResource("1_7uws0")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykrpk"]
atlas = ExtResource("1_7uws0")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1nod"]
atlas = ExtResource("1_7uws0")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kqyw"]
atlas = ExtResource("1_7uws0")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba42v"]
atlas = ExtResource("4_djydg")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_em43t"]
atlas = ExtResource("4_djydg")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvt27"]
atlas = ExtResource("4_djydg")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4s5w"]
atlas = ExtResource("4_djydg")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsb6l"]
atlas = ExtResource("4_djydg")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1avqj"]
atlas = ExtResource("4_djydg")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4qpa"]
atlas = ExtResource("4_djydg")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlnca"]
atlas = ExtResource("4_djydg")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1q5g"]
atlas = ExtResource("4_djydg")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_chajt"]
atlas = ExtResource("4_djydg")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_afvx7"]
atlas = ExtResource("4_djydg")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1p0sf"]
atlas = ExtResource("4_djydg")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kl5g2"]
atlas = ExtResource("4_djydg")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jiuwk"]
atlas = ExtResource("4_djydg")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5mos"]
atlas = ExtResource("4_djydg")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dynk0"]
atlas = ExtResource("4_djydg")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ge1t"]
atlas = ExtResource("4_djydg")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlcpy"]
atlas = ExtResource("4_djydg")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1dak"]
atlas = ExtResource("4_djydg")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fvev"]
atlas = ExtResource("4_djydg")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_svuau"]
atlas = ExtResource("3_6avc5")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro20i"]
atlas = ExtResource("3_6avc5")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8y75b"]
atlas = ExtResource("3_6avc5")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tebod"]
atlas = ExtResource("3_6avc5")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nfx3"]
atlas = ExtResource("3_6avc5")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hnlq"]
atlas = ExtResource("3_6avc5")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d73qs"]
atlas = ExtResource("3_6avc5")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6wme"]
atlas = ExtResource("3_6avc5")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxwvg"]
atlas = ExtResource("3_6avc5")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v4cy"]
atlas = ExtResource("3_6avc5")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8rto"]
atlas = ExtResource("3_6avc5")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4gk5"]
atlas = ExtResource("3_6avc5")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0hd7"]
atlas = ExtResource("3_6avc5")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpigg"]
atlas = ExtResource("3_6avc5")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nt8su"]
atlas = ExtResource("3_6avc5")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_10pim"]
atlas = ExtResource("3_6avc5")
region = Rect2(144, 144, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_svuau"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbtrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_es5sa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxlma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieypo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sulyr")
}],
"loop": false,
"name": &"chopping_down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_71adu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xm30n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qe74o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4se6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c5ab")
}],
"loop": false,
"name": &"chopping_left",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_omk8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kghjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72eiu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rr0sw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejaeo")
}],
"loop": false,
"name": &"chopping_right",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbkvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofe5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiw4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35rnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8clsk")
}],
"loop": false,
"name": &"chopping_up",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t61fv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_686vu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hss88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qd3e3")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6avc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mk55u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuses")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42irl")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xnwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djydg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsn6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blysn")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv5x3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykrpk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1nod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kqyw")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba42v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_em43t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvt27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4s5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsb6l")
}],
"loop": false,
"name": &"mining_down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1avqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4qpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlnca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1q5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chajt")
}],
"loop": false,
"name": &"mining_left",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_afvx7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1p0sf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kl5g2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jiuwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5mos")
}],
"loop": false,
"name": &"mining_right",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dynk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ge1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlcpy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1dak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fvev")
}],
"loop": false,
"name": &"mining_up",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_svuau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro20i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8y75b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tebod")
}],
"loop": false,
"name": &"walk_down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nfx3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hnlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d73qs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6wme")
}],
"loop": false,
"name": &"walk_left",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxwvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2v4cy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8rto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4gk5")
}],
"loop": false,
"name": &"walk_right",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0hd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpigg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nt8su")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10pim")
}],
"loop": false,
"name": &"walk_up",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7uws0"]
radius = 3.0
height = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_blysn"]
size = Vector2(18, 20)

[node name="Player" type="CharacterBody2D" groups=["player"]]
y_sort_enabled = true
collision_layer = 8
script = ExtResource("1_t61fv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_svuau")
animation = &"mining_up"
autoplay = "idle_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_7uws0")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "actor")]
script = ExtResource("3_hss88")
initial_state = NodePath("Idle")
actor = NodePath("..")
metadata/_custom_type_script = "uid://dpcpqo8vybrpj"

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_qd3e3")
metadata/_custom_type_script = "uid://bjoirho8mtgjv"

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("5_6avc5")
metadata/_custom_type_script = "uid://bjoirho8mtgjv"

[node name="Chopping" type="Node" parent="StateMachine"]
script = ExtResource("7_42irl")
metadata/_custom_type_script = "uid://bjoirho8mtgjv"

[node name="Mining" type="Node" parent="StateMachine"]
script = ExtResource("9_3xnwo")
metadata/_custom_type_script = "uid://bjoirho8mtgjv"

[node name="Interact" type="Node" parent="StateMachine"]
script = ExtResource("11_blysn")
metadata/_custom_type_script = "uid://bjoirho8mtgjv"

[node name="SelectionComponent" parent="." instance=ExtResource("7_mk55u")]

[node name="HitBoxComponent" parent="." instance=ExtResource("12_bsn6e")]

[node name="HitBoxCollisionShape" type="CollisionShape2D" parent="HitBoxComponent"]
position = Vector2(-9, 0)
shape = SubResource("RectangleShape2D_blysn")
disabled = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 4.0
target_desired_distance = 12.0
debug_enabled = true
